crates/tsn-lsp/errors.txt
    Checking tsn-lsp v0.1.0 (C:\Users\x\dev\ts-native\crates\tsn-lsp)
error[E0422]: cannot find struct, variant or union type `FunctionType` in this scope
   --> crates\tsn-lsp\src\pipeline\mod.rs:132:45
    |
132 |                         if let TypeKind::Fn(FunctionType {
    |                                             ^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
3   + use tsn_checker::types::FunctionType;
    |

error[E0422]: cannot find struct, variant or union type `FunctionType` in this scope
   --> crates\tsn-lsp\src\pipeline\mod.rs:153:52
    |
153 |                 is_arrow: if let Some(TypeKind::Fn(FunctionType { is_arrow, .. })) =
    |                                                    ^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
3   + use tsn_checker::types::FunctionType;
    |

warning: unused import: `ClassMemberKind`
 --> crates\tsn-lsp\src\pipeline\mod.rs:6:36
  |
6 | use tsn_checker::{module_resolver, ClassMemberKind, SymbolKind};
  |                                    ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `super::symbol::symbol_at`
 --> crates\tsn-lsp\src\query\chain.rs:7:5
  |
7 | use super::symbol::symbol_at;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::token::token_index_at`
 --> crates\tsn-lsp\src\query\chain.rs:8:5
  |
8 | use super::token::token_index_at;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
  --> crates\tsn-lsp\src\pipeline\mod.rs:70:31
   |
70 |                     .map(|ms| symbols::map_members(ms, &tokens))
   |                               ^^^^^^^ use of unresolved module or unlinked crate `symbols`
   |
   = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
  --> crates\tsn-lsp\src\pipeline\mod.rs:74:126
   |
74 | ...ref().unwrap_or(&sym.name)).map(|ms| symbols::map_members(ms, &tokens)))
   |                                         ^^^^^^^ use of unresolved module or unlinked crate `symbols`
   |
   = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
  --> crates\tsn-lsp\src\pipeline\mod.rs:83:31
   |
83 |                     .map(|ms| symbols::map_members(ms, &tokens))
   |                               ^^^^^^^ use of unresolved module or unlinked crate `symbols`
   |
   = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
  --> crates\tsn-lsp\src\pipeline\mod.rs:92:51
   |
92 | ...                   .map(|ms| symbols::map_members(ms, &tokens))
   |                                 ^^^^^^^ use of unresolved module or unlinked crate `symbols`
   |
   = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
   --> crates\tsn-lsp\src\pipeline\mod.rs:105:31
    |
105 |                     .map(|ms| symbols::map_members(ms, &tokens))
    |                               ^^^^^^^ use of unresolved module or unlinked crate `symbols`
    |
    = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
   --> crates\tsn-lsp\src\pipeline\mod.rs:112:31
    |
112 |                     .map(|ms| symbols::map_members(ms, &tokens))
    |                               ^^^^^^^ use of unresolved module or unlinked crate `symbols`
    |
    = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
   --> crates\tsn-lsp\src\pipeline\mod.rs:116:131
    |
116 | ...ref().unwrap_or(&sym.name)).map(|ms| symbols::map_members(ms, &tokens)))
    |                                         ^^^^^^^ use of unresolved module or unlinked crate `symbols`
    |
    = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `symbols`
   --> crates\tsn-lsp\src\pipeline\mod.rs:177:5
    |
177 |     symbols::inject_stdlib_symbols(&mut all_symbols, &mut symbol_map, &source);
    |     ^^^^^^^ use of unresolved module or unlinked crate `symbols`
    |
    = help: if you wanted to use a crate named `symbols`, use `cargo add symbols` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `params`
   --> crates\tsn-lsp\src\pipeline\mod.rs:179:24
    |
179 |     let param_scopes = params::collect_param_scopes(&tokens);
    |                        ^^^^^^ use of unresolved module or unlinked crate `params`
    |
    = help: if you wanted to use a crate named `params`, use `cargo add params` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `params`
   --> crates\tsn-lsp\src\pipeline\mod.rs:180:46
    |
180 |     let (type_param_map, type_param_names) = params::collect_type_params(&tokens);
    |                                              ^^^^^^ use of unresolved module or unlinked crate `params`
    |
    = help: if you wanted to use a crate named `params`, use `cargo add params` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0422, E0433.
For more information about an error, try `rustc --explain E0422`.
warning: `tsn-lsp` (lib) generated 3 warnings
error: could not compile `tsn-lsp` (lib) due to 12 previous errors; 3 warnings emitted
